--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"start": "node Login/index.js",
-	"dev": "node Login/index.js"
+    "start": "node Login/index.js",
+    "dev": "node Login/index.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.16.2",
+    "kill-port": "^1.6.0",
     "mongoose": "^5.7.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
